refactored for angular

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 
     <!-- factories -->
     <script src= "./app/factories/AnimaFactory.js"></script>
+    <script src= "./app/factories/ExpFactory.js"></script>
+    
       
 
 </body>
