--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 
     <div ng-view></div>
         <!-- //angular scripts -->
-    <script src="node_modules/angular/angular.min.js"></script>
-    <script src="node_modules/angular-route/angular-route.min.js"></script>
+    <script src="./node_modules/angular/angular.min.js"></script>
+    <script src="./node_modules/angular-route/angular-route.min.js"></script>
+   
+   
     <script src="./app/app.js"></script>
 
     <!-- controllers -->
@@ -24,6 +26,7 @@
     <!-- factories -->
     <script src= "./app/factories/AnimaFactory.js"></script>
     <script src= "./app/factories/ExpFactory.js"></script>
+
     
       
 
